# swagger.json
@@ -17,7 +17,7 @@
         "tags": [
           "Import"
         ],
-        "summary": "Import volumes.",
+        "summary": "Import all resources.",
         "operationId": "ImportAllHandler",
         "responses": {
           "202": {
@@ -27,10 +27,39 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
+          }
+        },
+        "x-method-visibility": "public"
+      }
+    },
+    "/all/ws": {
+      "get": {
+        "tags": [
+          "Import"
+        ],
+        "summary": "Import all resources with websockets responce.",
+        "operationId": "ImportAllWS",
+        "parameters": [
+          {
+            "$ref": "#/parameters/UpgradeHeader"
+          },
+          {
+            "$ref": "#/parameters/ConnectionHeader"
+          },
+          {
+            "$ref": "#/parameters/SecWebSocketKeyHeader"
+          },
+          {
+            "$ref": "#/parameters/SecWebsocketVersionHeader"
+          }
+        ],
+        "responses": {
+          "101": {
+            "description": "import response"
+          },
+          "default": {
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -51,10 +80,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -73,10 +99,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -97,10 +120,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -119,10 +139,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -143,10 +160,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -165,10 +179,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -189,10 +200,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -211,10 +219,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -235,10 +240,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -257,10 +259,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -281,10 +280,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -303,10 +299,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -327,10 +320,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -349,10 +339,7 @@
             }
           },
           "default": {
-            "description": "cherry error",
-            "schema": {
-              "$ref": "#/definitions/importAllHandlerDefaultBody"
-            }
+            "$ref": "#/responses/error"
           }
         },
         "x-method-visibility": "public"
@@ -2003,56 +1990,6 @@
         }
       },
       "x-go-package": "github.com/containerum/kube-importer/vendor/github.com/containerum/kube-client/pkg/model"
-    },
-    "importAllHandlerDefaultBody": {
-      "description": "Err -- standard serializable API error\nMessage -- constant error message:\n+ \"invalid username\"\n+ \"quota exceeded\"\n+ \"validation error\"\n...etc...\nID -- unique error identification code\nDetails -- optional context error messages kinda\n+ \"field 'Replicas' must be non-zero value\"\n+ \"not enough tights to feed gopher\"\n+ \"resource 'God' does't exist\"\nFields -- optional set of key-value pairs",
-      "type": "object",
-      "properties": {
-        "details": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "Details"
-        },
-        "fields": {
-          "description": "Fields -- represents additional key-value fields of error",
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          },
-          "x-go-package": "github.com/containerum/cherry"
-        },
-        "id": {
-          "description": "ErrID -- represents unique error ID",
-          "type": "object",
-          "properties": {
-            "kind": {
-              "description": "ErrKind -- represents kind of error",
-              "type": "integer",
-              "format": "uint64",
-              "x-go-package": "github.com/containerum/cherry"
-            },
-            "sid": {
-              "description": "ErrSID -- represents service ID of error",
-              "type": "string",
-              "x-go-package": "github.com/containerum/cherry"
-            }
-          },
-          "x-go-package": "github.com/containerum/cherry"
-        },
-        "message": {
-          "type": "string",
-          "x-go-name": "Message"
-        },
-        "status_http": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "StatusHTTP"
-        }
-      },
-      "x-go-gen-location": "operations",
-      "x-go-package": "github.com/containerum/cherry"
     }
   },
   "parameters": {
@@ -2085,34 +2022,20 @@
       "required": true
     },
     "UserIDHeader": {
-      "type": "string",
-      "format": "uuid",
-      "name": "X-User-ID",
-      "in": "header",
-      "required": true
+      "$ref": "vendor/github.com/containerum/utils/httputil/swagger.json#/parameters/UserIDHeader"
     },
     "UserNamespaceHeader": {
-      "type": "string",
-      "name": "X-User-Namespace",
-      "in": "header",
-      "required": true
+      "$ref": "vendor/github.com/containerum/utils/httputil/swagger.json#/parameters/UserNamespacesHeader"
     },
     "UserRoleHeader": {
-      "enum": [
-        "user",
-        "admin"
-      ],
-      "type": "string",
-      "name": "X-User-Role",
-      "in": "header",
-      "required": true
+      "$ref": "vendor/github.com/containerum/utils/httputil/swagger.json#/parameters/UserRoleHeader"
     }
   },
   "responses": {
     "error": {
       "description": "cherry error",
       "schema": {
-        "$ref": "#/definitions/importAllHandlerDefaultBody"
+        "$ref": "vendor/github.com/containerum/cherry/swagger.json#/definitions/Err"
       }
     }
   }
